kubernetes/core/networking/nginx-int-ingress-system/services/grafana/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ExternalName
  externalName: mgmt-srv-01.${LOCAL_DOMAIN}
  ports:
    - name: http
      port: &port 3000
      protocol: TCP
      targetPort: *port
