kubernetes/core/networking/nginx-int-ingress-system/services/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app grafana
spec:
  ingressClassName: int-ingress
  rules:
    - host: &host grafana.${K8S_GATEWAY_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 3000
  tls:
    - hosts:
        - *host
