kubernetes/core/networking/nginx-int-ingress-system/services/grafana/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app grafana
  annotations:
    external-dns.alpha.kubernetes.io/target: ${LOCAL_DOMAIN}
spec:
  ingressClassName: int-ingress
  rules:
    - host: &host grafana.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 3000
